<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/mainBg"
    tools:context="com.loubii.account.ui.card.CardAddActivity">

    <include layout="@layout/layout_toolbar_header_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lin_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBgSticky"
                android:text="@string/card_add_tips"
                android:textColor="@color/colorTextLinItem"
                android:textSize="12sp"
                android:paddingLeft="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <include layout="@layout/layout_base_card_add" />

                <RelativeLayout
                    android:id="@+id/rl_phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorTextWhite"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/card_add_phone_num"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15dp" />
                    <com.loubii.account.view.DeleteEditText
                        android:id="@+id/et_phone_num"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/card_add_item_margin_right"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/hint_input_phone_num"
                        android:maxLength="11"
                        android:textColorHint="@color/colorTextHint"
                        android:textSize="15sp"
                        android:textColor="@color/colorTextCardAddEdittext"
                        android:layout_centerVertical="true"
                        android:inputType="number"
                        android:focusableInTouchMode="false"
                        />
                </RelativeLayout>

            <LinearLayout
                android:id="@+id/lin_credit_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorTextWhite"
                android:orientation="vertical"
                android:visibility="gone">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/mainBg" />
                <RelativeLayout
                    android:id="@+id/rl_refund"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/itemCardAddHeight"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/card_add_refund"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/tv_refund"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/card_add_item_margin_right"
                        android:gravity="center_vertical"
                        android:background="@null"
                        android:text="@string/hint_input_refund"
                        android:textColor="@color/colorTextHint"
                        android:textSize="15sp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/mainBg" />

                <RelativeLayout
                    android:id="@+id/rl_charge_off"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/itemCardAddHeight"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/card_add_charge_off"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />
                    <TextView
                        android:id="@+id/tv_charge_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/card_add_item_margin_right"
                        android:gravity="center_vertical"
                        android:background="@null"
                        android:text="@string/hint_input_charge_off"
                        android:textColor="@color/colorTextHint"
                        android:textSize="15dp" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="30dp"
                    android:background="@color/mainBg" />

                <RelativeLayout
                    android:id="@+id/rl_limit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/itemCardAddHeight"
                    android:background="@color/colorTextWhite"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:text="@string/card_add_limit"
                        android:textColor="@color/colorPrimary"
                        android:textSize="15sp" />

                    <com.loubii.account.view.DeleteEditText
                        android:id="@+id/et_limit"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:paddingRight="@dimen/card_add_item_margin_right"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/hint_input_limit"
                        android:maxLength="11"
                        android:textColorHint="@color/colorTextHint"
                        android:textSize="15sp"
                        android:textColor="@color/colorTextCardAddEdittext"
                        android:layout_centerVertical="true"
                        android:inputType="number"
                        android:focusableInTouchMode="false"/>
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/bt_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/conor_button_green"
                android:clickable="false"
                android:text="@string/next"
                android:textColor="@color/colorTextWhite"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <!--android:background="@drawable/bg_checkbox_select"-->
                <CheckBox
                    android:id="@+id/cb_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"

                    android:button="@null"
                    android:checked="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/read_agreement"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/tv_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_agreement"
                    android:textColor="@color/colorGreen"
                    android:textSize="15dp"
                    android:clickable="true"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
